修复搜索功能

--- a/src/main/resources/static/css/general.css
+++ b/src/main/resources/static/css/general.css
@@ -211,6 +211,7 @@ body {
     background-image: url(/images/qyw-back.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment:fixed;
     overflow: auto;
 }
 div.picture{
