--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -25,7 +25,7 @@
             </h2>
             <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
-            <form action="/publish" method="post" enctype="multipart/form-data">
+            <form action="/publish" method="post" enctype="multipart/form-data" accept-charset="UTF-8">
                 <input type="hidden" name="id" th:value="${id}">
                 <input type="hidden" name="area" th:value="${area}">
                 <div class="form-group">
