--- a/src/main/resources/templates/campus.html
+++ b/src/main/resources/templates/campus.html
@@ -63,14 +63,14 @@
                         <a class="dropdown-item" href="/publish?area=sharing" >资源共享</a>
                     </div>
                 </li>
-                <li class="nav-item dropdown" th:if="${session.user != null && session.user.state == 0}">
+                <li class="nav-item dropdown" th:if="${session.user != null}">
                     <a class="nav-link" href="/profile/replies">
                         <i class="fa fa-bell" style="font-size:20px;"></i>
                         <span class="badge" th:if="${session.user != null}" th:text="${session.unReadCount}"></span>
                     </a>
                 </li>
 
-                <li class="nav-item dropdown dropdown-slim" th:if="${session.user != null && session.user.state == 0}">
+                <li class="nav-item dropdown dropdown-slim" th:if="${session.user != null }">
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
                         <span th:text="${session.user.getName()}"></span><span class="caret"></span>
                     </a>
