--- a/src/main/resources/templates/sharing.html
+++ b/src/main/resources/templates/sharing.html
@@ -87,7 +87,7 @@
                 <h4>相关问题</h4>
                 <ul style="list-style: none; font-size:13px; padding-left: 0; line-height: 20px">
                     <li th:each="related : ${relateShare}">
-                        <a th:href="@{'/question/'+${related.id}}" th:text="${related.title}"></a>
+                        <a th:href="@{'/share/'+${related.id}}" th:text="${related.title}"></a>
                     </li>
                 </ul>
             </div>
